# wattbuild

./: Cargo.toml  README.md
.github/workflows/: ci.yml
demo/: Cargo.toml  build.rs
demo/examples/: example.rs
demo/src/: lib.rs
src/: lib.rs  wattbuild.py
